[tool.poetry]
name = "registry_py"
version = "0.1.0"
description = ""
authors = ["Kasun Herath <kasunh01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"
flake8-black = "^0.2.0"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
